refacto : extract List<Integer> into a Dices object