@@ -1,6 +1,6 @@
 package com.kaamelott.combination;
 
-import java.util.List;
+import com.kaamelott.Dices;
 
 public class SuiteCombination implements Combination {
 
@@ -8,13 +8,13 @@ public class SuiteCombination implements Combination {
     }
 
     @Override
-    public boolean match(List<Integer> orderedDices) {
-        return orderedDices.get(0) == orderedDices.get(1) - 1
-                && orderedDices.get(1) == orderedDices.get(2) - 1;
+    public boolean match(Dices dices) {
+        return dices.getFirst() == dices.getSecond() - 1
+                && dices.getSecond() == dices.getThird() - 1;
     }
 
     @Override
-    public int compute(List<Integer> orderedDices) {
+    public int compute(Dices dices) {
         return compute(0);
     }
 
